# ds_251_RAG

./: .gitignore  .pdm-python  .secrets_example  README.md  WP3_Advanced_RAG_HyDE_Example.ipynb  WP3_Advanced_RAG_discussion.md  WP4_Evaluating_RAG.ipynb  config.toml  dev.ipynb  freeze.txt  model_eval.ipynb  open_source.ipynb  open_source_demo.ipynb  open_source_rag_demo.ipynb  pyproject.toml  rag_demo.ipynb  requirements.txt  scrape_nhs_conditions.ipynb  wp5_rag_explainer.md
.devcontainer/: devcontainer.json
db/dev/cb39a8f9-3c40-4d95-bc59-56a004eeb27f/: index_metadata.pickle
docs/: choosing-who-will-do-your-procedure.txt  dialysis.txt  pelvic-inflammatory-disease-pid-treatment.txt  prenatal-and-postnatal-exercise.txt  what-to-do-if-someone-has-a-seizure-fit.txt
src/: models.py
src/data_ingestion/: retrieve_nhs_conditions.py  simple_nhs_conditions_scrape.py
src/data_ingestion/corpus/: readme.md
src/model_eval/: process_cogstack_qa.ipynb  process_cogstack_qa.py
tests/unittests/: test_simple_nhs_conditions_scrape.py
